--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,6 +17,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 name = "swanky-node"
 
 [dependencies]
+log = { version = "0.4.8" }
+futures = { version = '0.3.1' }
 clap = { version = "3.1.6", features = ["derive"] }
 
 sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20", features = ["wasmtime"] }
