--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -18,7 +18,7 @@ jobs:
       run: rustup target list --installed
 
     - name: Run all tests
-      run: cargo test --all-features
+      run: cargo test
 
   native-linux:
     needs: test
