--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,6 +20,7 @@ name = "swanky-node"
 log = { version = "0.4.8" }
 futures = { version = '0.3.1' }
 clap = { version = "3.1.6", features = ["derive"] }
+serde_json = "1.0"
 
 sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", features = ["wasmtime"] }
 sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
