--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
 channel = "nightly-2022-06-16"
-components = [ "rustfmt" ]
+components = [ "rustfmt", "clippy" ]
 targets = [ "wasm32-unknown-unknown"]
 profile = "minimal"
