--- a/.github/workflows/checks-and-tests.yaml
+++ b/.github/workflows/checks-and-tests.yaml
@@ -26,7 +26,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-cargo-
     - name: Check all features compilation
-      run: cargo check --verbose --all-features
+      run: cargo check --verbose
 
   unit-test:
     runs-on: ubuntu-latest
@@ -49,5 +49,6 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+
     - name: Run all tests
-      run: cargo test --all-features
+      run: cargo test --verbose
