--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,8 +30,9 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+
     - name: Check all features compilation
-      run: cargo check --verbose --all-features
+      run: cargo check --verbose
 
     - name: Run all tests
       run: cargo test --all-features
@@ -60,6 +61,7 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+
     - name: Build optimized binary
       run: cargo build --release --verbose
 
