--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -27,6 +27,7 @@ jobs:
             cargo install taplo-cli
           fi
           taplo fmt --check
+
   clippy:
     runs-on: ubuntu-latest
     steps:
@@ -48,7 +49,8 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+
     - uses: actions-rs/clippy-check@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        args: --all-features -- -D warnings
+        args: -- -D warnings
