--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,7 @@ jobs:
       run: cargo check --verbose
 
     - name: Run all tests
-      run: cargo test --all-features
+      run: cargo test --verbose
 
   native-linux:
     needs: checks-and-tests
@@ -134,6 +134,7 @@ jobs:
     - name: Create download folder
       run: |
         mkdir -p ${{ matrix.os }}-bin
+
     - name: Download pre-built collator binary
       uses: actions/download-artifact@v3
       with:
@@ -145,6 +146,7 @@ jobs:
         cd ${{ matrix.os }}-bin
         chmod +x astar-collator
         tar zcvf astar-collator.tar.gz astar-collator
+
     - name: Upload binary artifact
       uses: actions/upload-release-asset@v1
       env:
