--- a/contracts/examples/rmrk/Cargo.toml
+++ b/contracts/examples/rmrk/Cargo.toml
@@ -1,22 +1,24 @@
 [package]
-name = "rmrk_example"
+name = "rmrk"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink_env = { version = "3", default-features = false }
-ink_lang = { version = "3", default-features = false }
-ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
-ink_prelude = { version = "3", default-features = false }
 ink_primitives = { version = "3", default-features = false }
+ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
+ink_env = { version = "3", default-features = false }
 ink_storage = { version = "3", default-features = false }
+ink_lang = { version = "3", default-features = false }
+ink_prelude = { version = "3", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 
+rmrk_extension = { path = "../../crates/rmrk", default-features = false }
+
 [lib]
-name = "rmrk_example"
+name = "rmrk"
 path = "lib.rs"
 crate-type = [
 	# Used for normal contract Wasm blobs.
@@ -26,11 +28,13 @@ crate-type = [
 [features]
 default = ["std"]
 std = [
-	"ink_metadata/std",
-	"ink_env/std",
-	"ink_storage/std",
-	"ink_primitives/std",
-	"scale/std",
-	"scale-info/std",
+    "ink_metadata/std",
+    "ink_env/std",
+    "ink_storage/std",
+    "ink_primitives/std",
+    "scale/std",
+    "scale-info/std",
+    "rmrk_extension/std",
+    "ink_prelude/std",
 ]
 ink-as-dependency = []
