--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -43,16 +43,16 @@ pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "
 pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 
-# astar-frame common
-chain-extension-trait = { git = "https://github.com/AstarNetwork/astar-frame", branch = "feature/uniques-ce.28", default-features = false }
+# astar-frame chain extensions
+chain-extension-trait = { path = "../../astar-frame/chain-extensions/trait", default-features = false }
+dapps-staking-chain-extension = { path = "../../astar-frame/chain-extensions/dapps-staking", default-features = false }
+pallet-chain-extension-rmrk = { path = "../../astar-frame/chain-extensions/rmrk", default-features = false }
+pallet-uniques-chain-extension = {  path = "../../astar-frame/chain-extensions/uniques", default-features = false }
 
-# dApps staking
-dapps-staking-chain-extension = { git = "https://github.com/AstarNetwork/astar-frame", branch = "feature/uniques-ce.28", default-features = false }
-pallet-dapps-staking = { git = "https://github.com/AstarNetwork/astar-frame", branch = "feature/uniques-ce.28", default-features = false }
-pallet-uniques-chain-extension = {  git = "https://github.com/AstarNetwork/astar-frame", branch = "feature/uniques-ce.28", default-features = false }
+# astar-frame pallets
+pallet-dapps-staking = { path = "../../astar-frame/frame/dapps-staking", default-features = false }
 
 # RMRK specific
-pallet-chain-extension-rmrk = { git = "https://github.com/AstarNetwork/astar-frame", branch = "feature/uniques-ce.28", default-features = false }
 pallet-rmrk-core = { git = "https://github.com/AstarNetwork/rmrk-substrate", branch = "polkadot-v0.9.28", default-features = false }
 pallet-rmrk-equip = { git = "https://github.com/AstarNetwork/rmrk-substrate", branch = "polkadot-v0.9.28", default-features = false }
 pallet-rmrk-market = { git = "https://github.com/AstarNetwork/rmrk-substrate", branch = "polkadot-v0.9.28", default-features = false }
