--- a/contracts/crates/rmrk/Cargo.toml
+++ b/contracts/crates/rmrk/Cargo.toml
@@ -13,7 +13,7 @@ ink_primitives = { version = "3", default-features = false }
 ink_storage = { version = "3", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "~2.1.0", default-features = false, features = ["derive"], optional = true }
 
 [lib]
 name = "rmrk_extension"
